--- a/porcentajes/index.html
+++ b/porcentajes/index.html
@@ -65,9 +65,11 @@
             <label>Fecha inicio:</label><input type="date">
             <label>Fecha fin:</label><input type="date">
           </div>
+          <div>
+            <button type="reset" class="boton" id="borrar">Borrar</button>
+            <button type="submit" class="boton" id="aceptar">Aceptar</button>
+          </div>
           
-          <button type="reset" class="boton" id="borrar">Borrar</button>
-          <button type="submit" class="boton" id="aceptar">Aceptar</button>
         </form>
       </div>
     </div>
