--- a/porcentajes/index.html
+++ b/porcentajes/index.html
@@ -28,14 +28,12 @@
         <form>
           <label for="nombre" id="labelNombre">Nombre del reto:</label><input type="text" id="nombre">
           <label for="descripcion" id="labelDesc">Descripción del reto:</label><textarea id="descripcion"></textarea>
-          <label for="publiopciones" id="labelOpciones">¿Publicar ya?</label>
-          <div id="publiopciones">
+          <label for="publiopciones" id="labelOpciones">¿Publicar ya?</label><div id="publiopciones">
             <label for="publicadaSi"><input type="radio" name="opciones" id="publicadaSi">Si</label>
             <label for="publicadaNo" id="labelPublicadaNo"><input type="radio" name="opciones" id="publicadaNo" checked>No</label>
           </div>
 
-          <label for="dirigido" id="labelDirigido">Dirigido a:</label>
-          <select id="dirigido">
+          <label for="dirigido" id="labelDirigido">Dirigido a:</label><select id="dirigido">
             <option>-Elegir una opción-</option>
             <option>INFANTIL</option>
             <option>ESO</option>
@@ -44,8 +42,7 @@
             <option>GS</option>
           </select>
 
-          <label for="categoria" id="labelCategoria">Categoría:</label>
-          <select id="categoria">
+          <label for="categoria" id="labelCategoria">Categoría:</label><select id="categoria">
             <option>-Elegir una opción-</option>
             <option>Ahorro de agua</option>
             <option>Reciclaje de desechos</option>
